--- a/themes/upbound/layouts/_default/baseof.html
+++ b/themes/upbound/layouts/_default/baseof.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="color-toggle-hidden" color-theme="light">
+<html lang="en" class="color-toggle" color-theme="light">
   <head>
     {{ partial "head/base" . }}
   </head>
