--- a/themes/upbound/layouts/partials/body/left-sidebar-nav.html
+++ b/themes/upbound/layouts/partials/body/left-sidebar-nav.html
@@ -14,12 +14,20 @@
                 {{ $expand := or (eq $currentPage .) (eq $currentPage.FirstSection .) }}
                 {{ $id := printf "section-%s" .Section | urlize }}
                 
-                <div class="d-flex flex-row my-0 nav-parent-container position-relative {{if eq $currentPage .}}active{{end}}" id="{{.Section}}" data-bs-toggle="collapse" data-bs-target="#collapse-{{$id}}" onclick="this.querySelector('.accordion-button').classList.toggle('collapsed'); window.location.href='{{.Permalink}}';">
+                <div class="d-flex flex-row my-0 nav-parent-container position-relative {{if eq $currentPage .}}active{{end}}" id="{{.Section}}" data-bs-toggle="collapse" data-bs-target="#collapse-{{$id}}" onclick="this.querySelector('.accordion-button').classList.toggle('collapsed');">
+
                     <div class="button-container left-offset">
-                        <div id="{{.Section}}-button" class="mx-0 accordion-button accordion accordion-item {{if not $expand}} collapsed {{end}}" type="button" aria-expanded="false" aria-controls="collapse-{{$id}}" title="Close/Expand"></div>
+                        <div id="{{.Section}}-button" class="mx-0 accordion-button accordion accordion-item {{if not $expand}} collapsed {{end}}" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-{{$id}}" aria-expanded="false" aria-controls="collapse-{{$id}}" title="Close/Expand"></div>
                     </div>
-                    <span class="nav-parent-title">{{.Title }}</span>
+                
+                    <a href="{{.Permalink}}" class="link" data-bs-toggle="collapse" data-bs-target="#collapse-{{$id}}" onclick="event.stopPropagation(); window.location.href='{{.Permalink}}';">
+                        <div class="nav-parent-title">
+                            {{.Title }}
+                        </div>
+                    </a>
+                
                 </div>
+                
                 
                 
                 <div class="nav-child-container" id="{{.Section}}-children">
@@ -27,7 +35,7 @@
                         {{if .Content}}
                             <div class="list-group-item list-group-item-action nav-child child-link-container d-flex flex-row {{if eq $currentPage .}}active{{end}} {{ if or (not .Page.Params.tocHidden) (eq .CurrentSection "contribute") }}d-none{{end}}">
                                 <div class="left-offset hide"></div>
-                            <a href="{{.Permalink}}" class="stretched-link child-link">{{ .Title }}</a>
+                            <a href="{{.Permalink}}" class="link child-link">{{ .Title }}</a>
                         </div>
                     {{ end }}
 
@@ -56,7 +64,7 @@
                                 {{if .Content}}
                                 <div class="list-group-item list-group-item-action nav-child child-link-container d-flex flex-row {{if eq $currentPage .}}active{{end}} {{ if or (not .Page.Params.tocHidden) (eq .CurrentSection "contribute") }}d-none{{end}}">
                                     <div class="left-offset hide"></div>
-                                <a href="{{.Permalink}}" class="stretched-link child-link">{{ .Title }}</a>
+                                <a href="{{.Permalink}}" class="link child-link">{{ .Title }}</a>
                             </div>
                                 {{end}}
                                 {{ range .Pages }}
@@ -70,11 +78,13 @@
                             </div>
                         </div>
 
+                        
+
                     {{ else }}
                         <!-- Show Section Title only -->
                         <div class="list-group-item list-group-item-action nav-child child-link-container d-flex flex-row {{if eq $currentPage .}}active{{end}} {{ if .Page.Params.tocHidden }}d-none{{end}}">
                             <div class="left-offset hide"></div>
-                            <a href="{{.Permalink}}" class="stretched-link child-link">
+                            <a href="{{.Permalink}}" class="link child-link">
                                 {{ .Title }}
                             </a>
                         </div>
