--- a/themes/upbound/layouts/partials/body/top-nav.html
+++ b/themes/upbound/layouts/partials/body/top-nav.html
@@ -4,8 +4,11 @@
         <a href="//www.upbound.io">
             <img loading="eager" src="/img/logos/upbound-docs.svg" height="21" alt="Upbound Homepage">
         </a>
+        
     </div>
 
     {{ partialCached "body/search-panel" . }}
+
+    {{ partialCached "body/darkmode"  .}}
 
 </div>
