--- a/themes/upbound/assets/scss/_top-nav.scss
+++ b/themes/upbound/assets/scss/_top-nav.scss
@@ -139,26 +139,30 @@
         }
     }
 
-    .nav-item {
-        margin: 0; // Adjust as needed
+    .dark-mode {
+        margin: 0;
         position: absolute;
         right: 0;
-        top: 0; // Adjust as needed
+        top: 0;
+        margin-top: 10px;
+        margin-right: 16px;
 
-        // Align with search panel padding and margins
-        margin-top: 10px; // Adjust as needed
-        margin-right: 16px; // Adjust as needed
     }
 
     .form-check.form-switch.color-switcher {
-        // Add styles for the form-check container here
+        display: flex; 
+        align-items: center;
+        
+
+        @include media-breakpoint-down(xl) {
+            margin-top: 0;
+            margin-right: 0;
+            
+        }
     }
 
     .form-check-input {
-        // Add styles for the checkbox input here
+        margin-right: 8px;
     }
 
-    .form-check-label {
-        // Add styles for the label here
-    }
 }
