--- a/themes/upbound/layouts/partials/body/darkmode.html
+++ b/themes/upbound/layouts/partials/body/darkmode.html
@@ -1,4 +1,4 @@
-<div class="nav-item col-xs p-2">
+<div class="dark-mode col-xs p-2">
     <div class="form-check form-switch color-switcher">
       <input class="d-flex form-check-input" type="checkbox" id="darkSwitch" />
       <label class="d-flex navbar-link form-check-label" for="darkSwitch">Dark Mode</label>
