--- a/themes/upbound/assets/scss/_code-theme-light.scss
+++ b/themes/upbound/assets/scss/_code-theme-light.scss
@@ -1,11 +1,13 @@
 // Code block chroma color theme.
 // https://gist.github.com/AbeEstrada/e16e4d22d9adec4e720fd62a16a0113d
 
-@mixin code-theme {
+@mixin code-theme-light {
   --code-block-background-color: #19212C;
   --code-line-numbers-background-color: #{lighten(#19212C, 3)};
   --edit-code-pencil: #fafafa;
   --code-highlight-background: #{$up-grey-700n};
+  --border-bottom: #{$up-neutral-100};
+  
 
 
   /* Theme: Colors customized by Upbound. Was originally Dracula */
