--- a/themes/upbound/assets/scss/_home.scss
+++ b/themes/upbound/assets/scss/_home.scss
@@ -140,7 +140,7 @@
             }
 
             &:hover {
-                background-color: #F1F2F4;
+                background-color: var(--latest-pill-background);
             }
         }
 
