--- a/themes/upbound/assets/scss/bootstrap/_tables.scss
+++ b/themes/upbound/assets/scss/bootstrap/_tables.scss
@@ -16,7 +16,7 @@
 
   width: 100%;
   margin-bottom: $spacer;
-  color: var(--#{$prefix}table-color);
+  color: var(--table-color);
   vertical-align: $table-cell-vertical-align;
   border-color: var(--#{$prefix}table-border-color);
 
