--- a/themes/upbound/assets/scss/_left-sidebar-nav.scss
+++ b/themes/upbound/assets/scss/_left-sidebar-nav.scss
@@ -22,7 +22,7 @@
     }
 
     &.offcanvas-xl {
-        background: #{$up-neutral-0} !important;
+        background: var(--body-background) !important;
     }
 
     .left-offset {
