--- a/themes/upbound/assets/scss/_top-nav.scss
+++ b/themes/upbound/assets/scss/_top-nav.scss
@@ -2,7 +2,7 @@
 
 @mixin content-hierarchy {
     border: 1px solid #CDCDD3;
-    background-color: white;
+    background-color: var(--background-color);
     margin: -65px auto 0;
     max-width: 424px;
     position: relative;
@@ -15,12 +15,12 @@
 
 #top-nav {
     height: 60px;
-    border-bottom: 1px solid #{$up-neutral-100};
+    border-bottom: 1px solid var(--border-bottom);
     width: 100%;
     left: 0;
     right: 0;
     margin: auto;
-    background-color: white;
+    background-color: var(--background-color);
 
     @include media-breakpoint-down(xl) {
         position: fixed;
@@ -70,7 +70,7 @@
             height: 59px;
             max-width: 404px;
             margin: auto;
-            background-color: white;
+            background-color: var(--background-color);
             padding: 10px 4px 0 4px;
             z-index: 2;
             position: relative;
@@ -81,7 +81,7 @@
                 position: relative;
                 border: 1px solid #CDCDD3;
                 border-radius: 8px;
-                background-color: white;
+                background-color: var(--background-color);
 
                 &:focus-within {
                     border-color: #{$up-purple-400};
@@ -96,7 +96,7 @@
                     font-size: 14px;
                     box-shadow: none;
                     height: 100%;
-                    background-color: white;
+                    background-color: var(--background-color);
         
                     &::placeholder {
                         color: #{$up-neutral-400};
@@ -139,17 +139,18 @@
         }
     }
 
-    .dark-mode {
+    .nav-item {
         margin: 0;
         position: absolute;
         right: 0;
         top: 0;
         margin-top: 10px;
         margin-right: 16px;
+        list-style-type: none;
 
     }
 
-    .form-check.form-switch.color-switcher {
+    .form-check.form-switch.colormode {
         display: flex; 
         align-items: center;
         
@@ -163,6 +164,13 @@
 
     .form-check-input {
         margin-right: 8px;
+    }
+    
+    .form-check-input:checked {
+        background-color: var(--background-color);
+        border-color: #{$up-purple-300};
+        margin-right: 8px;
+
     }
 
 }
