--- a/themes/upbound/assets/scss/_variables.scss
+++ b/themes/upbound/assets/scss/_variables.scss
@@ -13,6 +13,10 @@ $body-line-height:            24px !default;
 
 $up-code-font-size:           14px !default;
 $up-code-line-height:         21px !default;
+$list-group-hover-bg:               var(--tertiary-bg) !default;
+$list-group-active-color:           $component-active-color !default;
+$list-group-active-bg:              $component-active-bg !default;
+$list-group-active-border-color:    $list-group-active-bg !default;
 
 // Variables ending with an "n" have accurate numbers that match their relative location on that color's light-dark spectrum.
 
@@ -45,6 +49,8 @@ $up-neutral-100:        #E5E6E9 !default;
 $up-neutral-200:        #CDCDD3 !default;
 $up-neutral-400:        #9A9CA7 !default;
 $up-neutral-600:        #686A7C !default;
+$up-neutral-900:        #222828 !default;
+$up-neutral-300:        #B5B7B7 !default;
 
 $up-blue-300n:          #7AC0F8 !default;
 
@@ -60,6 +66,34 @@ $borderDark:            #353950 !default;
 
 $font-color-dark:       #030724 !default;
 $font-color-light:      #686A7C !default;
+
+$indigo-dye: #074b83ff;
+$dark-spring-green: #2f6a31ff;
+$field-drab: #78640dff;
+$chocolate: #7b3b0aff;
+$barn-red: #780f07ff;
+$french-gray: #afb3caff; 
+$lavender-web: #d9ddfcff;
+$cool-gray: #828497ff;
+$french-gray-2: #b9bcd5ff;
+$night: #0c0c0eff;
+$night-2: #151619ff;
+$raisin-black: #2b2b31ff;
+$davys-gray: #585a65ff;
+$platinum: #d6dcdcff;
+$outer-space: #494b4bff;
+$licorice: #090113ff;
+$russian-violet: #150132ff;
+$persian-indigo: #330283ff;
+$grape: #5F2EB2;
+
+$tropical-indigo: #9b85d5ff;
+$periwinkle: #b9b1e7ff;
+$persian-indigo-2: #26025fff;
+$black: #000000ff;
+$onyx: #42434cff;
+$cool-gray: #9a9db1ff;
+
 
 $body-font-weight:        normal !default;
 $body-min-width:          20rem !default;
