--- a/themes/upbound/assets/scss/bootstrap/_variables.scss
+++ b/themes/upbound/assets/scss/bootstrap/_variables.scss
@@ -1601,7 +1601,7 @@ $list-group-item-bg-scale:          -80% !default; // Deprecated in v5.3.0
 $list-group-item-color-scale:       40% !default; // Deprecated in v5.3.0
 // fusv-enable
 
-$list-group-hover-bg:               var(--#{$prefix}tertiary-bg) !default;
+$list-group-hover-bg:               var(--latest-pill-background);
 $list-group-active-color:           $component-active-color !default;
 $list-group-active-bg:              $component-active-bg !default;
 $list-group-active-border-color:    $list-group-active-bg !default;
