--- a/themes/upbound/layouts/partials/body/darkmode.html
+++ b/themes/upbound/layouts/partials/body/darkmode.html
@@ -1,7 +1,6 @@
-<div class="dark-mode col-xs p-2">
-    <div class="form-check form-switch color-switcher">
-      <input class="d-flex form-check-input" type="checkbox" id="darkSwitch" />
-      <label class="d-flex navbar-link form-check-label" for="darkSwitch">Dark Mode</label>
-    </div>
+<li class="nav-item col-xs p-2">
+  <div class="form-check form-switch color-switcher" >
+    <input class="d-flex form-check-input" type="checkbox" id="darkSwitch" />
+    <label class="d-flex navbar-link form-check-label" for="darkSwitch">Dark Mode</label>
   </div>
-  
+</li>
