--- a/themes/upbound/assets/scss/_color-mode-dark.scss
+++ b/themes/upbound/assets/scss/_color-mode-dark.scss
@@ -7,6 +7,7 @@
     --rss-icon-fill: #{$persian-indigo};
     --font-color: white;
     --background-color: #{$up-neutral-900};
+    --home-resource-bg: #{$up-grey-700n};
 
     --nav-item-click: #{$up-neutral-0};
     --nav-item-click-bg: #{$up-grey-700n};
