--- a/themes/upbound/assets/scss/_top-nav.scss
+++ b/themes/upbound/assets/scss/_top-nav.scss
@@ -5,7 +5,7 @@
     background-color: var(--background-color);
     margin: -65px auto 0;
     max-width: 424px;
-    position: relative;
+    position:absolute;
     z-index: 1;
     max-height: 500px;
     overflow: scroll;
@@ -20,6 +20,7 @@
     left: 0;
     right: 0;
     margin: auto;
+    position: relative;
     background-color: var(--background-color);
 
     @include media-breakpoint-down(xl) {
@@ -36,12 +37,27 @@
         }
 
         .search-container {
-            width: 91%;
+            width: 90%;
         }
 
         .search-results,
         .no-results-container {
-            width: 98%;
+            width: 90%;
+        }
+
+        .nav-item {           
+            width: 25%;
+            margin-top: 10px;
+            font-size:smaller;
+        }
+        .form-check-input{
+            padding: 10px 4px 0 4px;
+            vertical-align: top;
+            margin-top: 10px;
+
+        }
+        .form-check-label{
+            display: none;
         }
     }
 
@@ -141,12 +157,19 @@
 
     .nav-item {
         margin: 0;
-        position: absolute;
+        position: fixed;
         right: 0;
         top: 0;
         margin-top: 10px;
         margin-right: 16px;
         list-style-type: none;
+
+
+        @include media-breakpoint-down(lg) {
+            margin-top: 0;
+            margin-right: 0;
+            
+        }
 
     }
 
@@ -164,6 +187,7 @@
 
     .form-check-input {
         margin-right: 8px;
+        align-items: center;
     }
     
     .form-check-input:checked {
