--- a/themes/upbound/assets/scss/bootstrap/_offcanvas.scss
+++ b/themes/upbound/assets/scss/bootstrap/_offcanvas.scss
@@ -7,7 +7,7 @@
   --#{$prefix}offcanvas-height: #{$offcanvas-vertical-height};
   --#{$prefix}offcanvas-padding-x: #{$offcanvas-padding-x};
   --#{$prefix}offcanvas-padding-y: #{$offcanvas-padding-y};
-  --#{$prefix}offcanvas-color: #{$offcanvas-color};
+  --offcanvas-color: #{$offcanvas-color};
   --#{$prefix}offcanvas-bg: #{$offcanvas-bg-color};
   --#{$prefix}offcanvas-border-width: #{$offcanvas-border-width};
   --#{$prefix}offcanvas-border-color: #{$offcanvas-border-color};
