--- a/themes/upbound/assets/scss/bootstrap/_navbar.scss
+++ b/themes/upbound/assets/scss/bootstrap/_navbar.scss
@@ -268,14 +268,14 @@
 
 .navbar-dark {
   // scss-docs-start navbar-dark-css-vars
-  --#{$prefix}navbar-color: #{$navbar-dark-color};
-  --#{$prefix}navbar-hover-color: #{$navbar-dark-hover-color};
-  --#{$prefix}navbar-disabled-color: #{$navbar-dark-disabled-color};
-  --#{$prefix}navbar-active-color: #{$navbar-dark-active-color};
-  --#{$prefix}navbar-brand-color: #{$navbar-dark-brand-color};
-  --#{$prefix}navbar-brand-hover-color: #{$navbar-dark-brand-hover-color};
-  --#{$prefix}navbar-toggler-border-color: #{$navbar-dark-toggler-border-color};
-  --#{$prefix}navbar-toggler-icon-bg: #{escape-svg($navbar-dark-toggler-icon-bg)};
+  --navbar-color: #{$navbar-dark-color};
+  --navbar-hover-color: #{$navbar-dark-hover-color};
+  --navbar-disabled-color: #{$navbar-dark-disabled-color};
+  --navbar-active-color: #{$navbar-dark-active-color};
+  --navbar-brand-color: #{$navbar-dark-brand-color};
+  --navbar-brand-hover-color: #{$navbar-dark-brand-hover-color};
+  --navbar-toggler-border-color: #{$navbar-dark-toggler-border-color};
+  --navbar-toggler-icon-bg: #{escape-svg($navbar-dark-toggler-icon-bg)};
   // scss-docs-end navbar-dark-css-vars
 }
 
