--- a/themes/upbound/assets/scss/_top-nav.scss
+++ b/themes/upbound/assets/scss/_top-nav.scss
@@ -46,18 +46,18 @@
         }
 
         .nav-item {           
-            width: 25%;
+            width: 20%;
             margin-top: 10px;
-            font-size:smaller;
         }
+
         .form-check-input{
             padding: 10px 4px 0 4px;
             vertical-align: top;
             margin-top: 10px;
-
         }
+
         .form-check-label{
-            display: none;
+            display: none !important;
         }
     }
 
