--- a/themes/upbound/assets/scss/_top-nav.scss
+++ b/themes/upbound/assets/scss/_top-nav.scss
@@ -54,6 +54,8 @@
             padding: 10px 4px 0 4px;
             vertical-align: top;
             margin-top: 10px;
+            position: fixed;
+            right: 0;
         }
 
         .form-check-label{
@@ -157,7 +159,7 @@
 
     .nav-item {
         margin: 0;
-        position: fixed;
+        position:absolute;
         right: 0;
         top: 0;
         margin-top: 10px;
