make hint boxes less horrible

--- a/themes/upbound/assets/scss/_color-mode-dark.scss
+++ b/themes/upbound/assets/scss/_color-mode-dark.scss
@@ -49,11 +49,11 @@
     --toc-mobile-menu-background: #{$russian-violet};
 
     //hint boxes
-    --hint-important-background:                #512606; 
+    --hint-important-background:                #623A2B; 
     --hint-important:                           #090501; 
-    --hint-warning-background:                  #4e0904; 
+    --hint-warning-background:                  #4B1929; 
     --hint-warning:                             #090101; 
-    --hint-tip-background:                      #053357;
+    --hint-tip-background:                      #184557;
     --hint-tip:                                 #010609;
     --hint-note-background:                     #2b2b31;
     --hint-note:                                #070808;
