--- a/themes/upbound/layouts/partials/body/left-sidebar-nav.html
+++ b/themes/upbound/layouts/partials/body/left-sidebar-nav.html
@@ -14,18 +14,18 @@
                 {{ $expand := or (eq $currentPage .) (eq $currentPage.FirstSection .) }}
                 {{ $id := printf "section-%s" .Section | urlize }}
                 
-                <div class="d-flex flex-row my-0 nav-parent-container position-relative {{if eq $currentPage .}}active{{end}}" id="{{.Section}}" data-bs-toggle="collapse" data-bs-target="#collapse-{{$id}}" onclick="this.querySelector('.accordion-button').classList.toggle('collapsed');">
+                <div class="d-flex flex-row my-0 nav-parent-container position-relative {{if eq $currentPage .}}active{{end}}" id="{{.Section}}" >
 
                     <div class="button-container left-offset">
                         <div id="{{.Section}}-button" class="mx-0 accordion-button accordion accordion-item {{if not $expand}} collapsed {{end}}" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-{{$id}}" aria-expanded="false" aria-controls="collapse-{{$id}}" title="Close/Expand"></div>
                     </div>
-                
+
                     <a href="{{.Permalink}}" class="link" data-bs-toggle="collapse" data-bs-target="#collapse-{{$id}}" onclick="event.stopPropagation(); window.location.href='{{.Permalink}}';">
                         <div class="nav-parent-title">
                             {{.Title }}
                         </div>
                     </a>
-                
+
                 </div>
                 
                 
@@ -50,12 +50,16 @@
                         {{ $hasContent := not $noContent }}
 
                         <!-- Parent Menu Button -->
-                        <div class="list-group-item list-group-item-action nav-child d-flex flex-row subheader position-relative {{ if .Page.Params.tocHidden }}d-none{{end}}" id="{{.Title}}" data-bs-toggle="collapse" data-bs-target="#collapse-{{$subid}}" onclick="this.querySelector('.accordion-button').classList.toggle('collapsed'); window.location.href='{{.Permalink}}';">
+                        <div class="list-group-item nav-child d-flex flex-row subheader position-relative {{ if .Page.Params.tocHidden }}d-none{{end}}" id="{{.Title}}" >
                             <div class="button-container left-offset z-3 {{if not .Pages}}hide{{end}}">
                                 <!-- Increase z-index to put the button over the stretched-link -->
-                                <div id="{{.Title}}-button" class="mx-0 accordion-button accordion accordion-item {{if not $subexpand}}collapsed{{end}}" type="button" aria-expanded="{{if $subexpand}}true{{else}}false{{end}}" aria-controls="collapse-{{$subid}}" title="Close/Expand"></div>
+                                <div id="{{.Title}}-button" class="mx-0 accordion-button accordion accordion-item {{if not $subexpand}}collapsed{{end}}" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-{{$subid}}" aria-expanded="false" aria-controls="collapse-{{$subid}}" title="Close/Expand"></div>
                             </div>
-                            <span class="subheader-title">{{.Title }}</span>
+                            <a href="{{.Permalink}}" class="link" data-bs-toggle="collapse" data-bs-target="#collapse-{{$id}}" onclick="event.stopPropagation(); window.location.href='{{.Permalink}}';">
+                                <div class="nav-parent-title">
+                                    {{.Title }}
+                                </div>
+                            </a>
                         </div>
 
 
@@ -70,7 +74,7 @@
                                 {{ range .Pages }}
                                     <div class="list-group-item list-group-item-action nav-child child-link-container d-flex flex-row {{if eq $currentPage .}}active{{end}} {{ if .Page.Params.tocHidden }}d-none{{end}}">
                                         <div class="left-offset hide"></div>
-                                        <a href="{{.Permalink}}" class="stretched-link child-link">
+                                        <a href="{{.Permalink}}" class="link">
                                             {{ .Title }}
                                         </a>
                                     </div>
