--- a/themes/upbound/layouts/partials/body/top-nav.html
+++ b/themes/upbound/layouts/partials/body/top-nav.html
@@ -2,7 +2,7 @@
 
     <div class="logo-container">
         <a href="//www.upbound.io">
-            <img loading="eager" src="/img/logos/upbound-docs.svg" height="21" alt="Upbound Homepage">
+            <img id="dynamic-image" loading="eager" src="" height="21" alt="Upbound Homepage">
         </a>
         
     </div>
