--- a/themes/upbound/assets/scss/_color-mode-light.scss
+++ b/themes/upbound/assets/scss/_color-mode-light.scss
@@ -8,6 +8,7 @@
     --content-link-color: #{$up-purple-400};
     --latest-pill-background: #{$up-grey-200};
     --font-color: #{$font-color-dark};
+    --background-color: white;
 
     --home-resource-bg: #{$up-grey-100};
 
@@ -36,7 +37,7 @@
     --hint-warning-background:       rgba(254, 245, 245, 1);
 
     --hint-tip:                      rgba(166,213,250,1);
-    --hint-tip-background:           rgba(244,250,254,1);
+    --hint-tip-background:           #f4fafe;
 
 
     --hint-note:                     rgba(205,205,211,1); 
