edits from review

--- a/themes/upbound/assets/scss/_top-nav.scss
+++ b/themes/upbound/assets/scss/_top-nav.scss
@@ -79,7 +79,9 @@
             text-decoration: none;
         }
 
-        
+        svg {
+            fill: var(--body-font-color);
+        }
     }
 
 
