--- a/themes/upbound/layouts/partials/body/top-nav.html
+++ b/themes/upbound/layouts/partials/body/top-nav.html
@@ -2,7 +2,7 @@
 
     <div class="logo-container">
         <a href="//www.upbound.io">
-            <img loading="eager" src="" height="21" alt="Upbound Homepage" id="logoImage">
+            <img loading="eager" src="/img/logos/upbound-docs.svg" height="21" alt="Upbound Homepage" id="logoImage">
         </a>
     </div>
     
@@ -10,7 +10,7 @@
         var logoColor = getComputedStyle(document.documentElement).getPropertyValue('--logo-color');
                 
         // Set the image source dynamically
-        document.getElementById("logoImage").src = logoColor;
+        document.getElementById("logoImage").src = logoColor.replace(/url\(['"]?(.*?)['"]?\)/, '$1');
     </script>
     
 
