--- a/themes/upbound/assets/scss/_color-modes.scss
+++ b/themes/upbound/assets/scss/_color-modes.scss
@@ -51,6 +51,8 @@ img {
   @include code-theme-dark;
 
   --logo-color: url('/img/logos/up-docs-white.svg');
+  --background-color-img: #{$up-grey-500};
+
 
 
     // Dim all images in dark mode
@@ -63,8 +65,9 @@ img {
   
     // Set the default image background to white
     // Without this transparent images are hard to see
+
     .bd-content img {
-      background-color: #fff;
+      background-color: #ffffff;
     }
     // But don't set the background to white on the home page tiles
     .home-card img {
