--- a/themes/upbound/layouts/partials/body/darkmode.html
+++ b/themes/upbound/layouts/partials/body/darkmode.html
@@ -4,3 +4,10 @@
     <label class="d-flex navbar-link form-check-label" for="darkSwitch">Dark Mode</label>
   </div>
 </li>
+<script>
+
+  if(document.documentElement.getAttribute("color-theme") === "dark"){
+    document.getElementById("darkSwitch").checked = true;
+  }
+
+</script>
